--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "predeploy": "npm run build",
-    "deploy": "ge-pages -d dist",
+    "predeploy": "npm run build -- --prod --base-href=https://tltk90.github.io/ol-triangle/ --deploy-url=https://tltk90.github.io/ol-triangle/",
+    "deploy": "gh-pages -d dist/ol-triangle",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
